Fixed bug where video submit button was being cut off

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -30,6 +30,10 @@ div {
 #notice {
   color: green; }
 
+#fileupload p {
+  margin: 4px 0 0 0;
+}
+
 .field_with_errors {
   padding: 2px;
   background-color: red;
